--- a/PlanIt-server/package.json
+++ b/PlanIt-server/package.json
@@ -12,6 +12,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5"
   },
   "devDependencies": {
